syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="StatisticsStepsPB";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_StatisticsSteps{
	//


}

message Ret_PBAPP_StatisticsSteps{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_StatisticsSteps data=3;


}

message REQ_PBAPP_StatisticsSteps{
	//

    message StatisticsSteps{

	    string step = 1; //,level,String,不校验,否,

    	string funAccount = 2; //,cost_mills,String,不校验,否,

    	string stepTime = 3; //,face_code,String,不校验,否,

	}


	repeated StatisticsSteps statisticsSteps = 1;

}