syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_reg_addUsersRegisterPrivacyAgree{
	///ife/reg/addUsersRegisterPrivacyAgree.html


}

message Ret_PBIFE_reg_addUsersRegisterPrivacyAgree{
	///ife/reg/addUsersRegisterPrivacyAgree.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_reg_addUsersRegisterPrivacyAgree data=3;


}

message REQ_PBIFE_reg_addUsersRegisterPrivacyAgree{
	///ife/reg/addUsersRegisterPrivacyAgree.html

	string isAuthorizePrivacy = 1; //,用户登录是否弹隐私协议提示框 1：同意 0：不同意,String,不校验,否,

	string operTime = 2; //,操作时间,String,不校验,否,

	string privacyAgreementVersion = 3; //,隐私协议版本号,String,不校验,否,


}