syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_userbaseinfo_getFunctionMenus{
	///ife/userbaseinfo/getFunctionMenus.html

  	string purchaseZone = 1; //,认购专区,String,不校验,否,
}

message Ret_PBIFE_userbaseinfo_getFunctionMenus{
	///ife/userbaseinfo/getFunctionMenus.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userbaseinfo_getFunctionMenus data=3;


}

message REQ_PBIFE_userbaseinfo_getFunctionMenus{


}